$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------

- fixed IPv6-ICMP firewall rule type matching

- added support for AICCU (a tool for dynamically configuring IPv6 tunnels
  from SixXS, allowing users with dynamic WAN IP addresses to use tunnels)
  Note that only heartbeat tunnels are supported at this time (no AYIYA).

- updated kernel to 6.3-RELEASE-p4 (ICMPv6 denial of service fix)

1.3b14
------

- updated PHP to 4.4.9

- modify boot loader for embedded images to use the serial speed set by
  the BIOS (and no longer a fixed speed as soon as the kernel boots),
  as in 1.2x releases

- add VMware .vmx config file (for "official" VM release)

- import "install on Hard Drive" feature (console menu) from AskoziaPBX; this
  allows one to install an image on HD/CF by first booting with the cdrom
  version of m0n0wall

- *** consolidate net45xx, net48xx and wrap images into a single "embedded"
  image. Users should download the "embedded" image and rename it to reflect
  their current platform so that it can be used to upgrade previous versions

- fix a long standing bug with regenerating firewall rules (including
  automatically generated ones) that reference the WAN interface when the
  WAN IP address changes

- change ZoneEdit update server name to dynamic.zoneedit.com

- remove SIP proxy (not much feedback from users; used a considerable amount of
  space)

- show driver names for network interfaces (obtained from dmesg) when
  assigning interfaces to make it a bit easier for the user to choose

- import ipnat source port randomization patch from FreeBSD CVS
  (see http://docs.freebsd.org/cgi/getmsg.cgi?fetch=427148+0+current/cvs-src)
  (important when running DNS servers behind m0n0wall with NAT turned on);
  add new option to System: Advanced page to control the port range used
  for random source port allocation during outbound NAT (default is