@@ -3,6 +3,9 @@ $Id$
 *** Note: Please add new entries to the top of this file. ***
 -------------------------------------------------------------------------------
 
+- add patch to enable custom next-server and filename options for
+  static mappings in DHCP server (by Stephen Erisman)
+
 - fixed IPv6-ICMP firewall rule type matching
 
 - added support for AICCU (a tool for dynamically configuring IPv6 tunnels
